--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Launch Chrome",
             "request": "launch",
             "type": "pwa-chrome",
-            "url": "http://localhost:8080/broggi/public",
+            "url": "http://localhost:8080/SGTA-Broggi/public",
             "webRoot": "${workspaceFolder}"
         },
         {
