--- a/.env
+++ b/.env
@@ -14,6 +14,13 @@ DB_DATABASE=broggi
 DB_USERNAME=root
 DB_PASSWORD=
 
+# DB_CONNECTION=mysql
+# DB_HOST=hostingmysql335.nominalia.com
+# DB_PORT=3306
+# DB_DATABASE=daw2a02
+# DB_USERNAME=daw2a02
+# DB_PASSWORD=Informatica2021
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
